Fix logo alignment on email capture

--- a/app/styles/components/email-capture-page.scss
+++ b/app/styles/components/email-capture-page.scss
@@ -7,6 +7,7 @@
   .twitter-link, .discord-link {
     color: black;
     font-size: 22px;
+    width: 80px;
   }
 
   .twitter-link {
